--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,6 @@
-@import "~bootstrap/scss/bootstrap.scss";
+@import '~bootstrap/scss/bootstrap.scss';
 
 /* 
-
     You can write your own styles here...
     
     
@@ -9,5 +8,14 @@
     other sylesheets into your bunde as well, e.j:
     
     import 'relative/path/to/stylesheet.scss';
-
 */
+
+.bigCounter{ text-align: center;
+background: gray;
+    
+}
+
+.bigCounter div{display: inline-block;
+font-size: 100px; background: #101010; color: white; padding: 20px; text-align: center;
+margin:8px;
+}
